# esp32-c6-zigbee-base

./: .gitignore  AGENTS.md  README.md  ROADMAP.md  package-lock.json  package.json
.github/workflows/: ci.yml  pages.yml
components/board_input/: CMakeLists.txt  board_input.c
components/board_input/include/: board_input.h
components/esp32_c6_zigbee_base/: CMakeLists.txt  Kconfig  esp32_c6_zigbee_base.c  idf_component.yml
components/esp32_c6_zigbee_base/include/: esp32_c6_zigbee_base.h
components/status_display/: CMakeLists.txt  status_display.c
components/status_display/include/: status_display.h
components/status_led/: CMakeLists.txt  idf_component.yml  status_led.c
components/status_led/include/: status_led.h
docs/: Gemfile  _config.yml  config-reference.md  config_metadata.json  index.md
docs/_includes/: head_custom.html
docs/development/: agent-policy.md  index.md  versioning.md
docs/examples/: generic-device.md  index.md
esphome/: README.md  esp32-c6-lcd-zigbee-supported.yaml
examples/generic_device/: CMakeLists.txt  partitions.csv  sdkconfig.defaults  sdkconfig.mbedtls_minimal
examples/generic_device/main/: CMakeLists.txt  idf_component.yml  main.c  product_config.c
scripts/: check_config_docs.js  generate_lucide_assets.js
